--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta lang="TR">
     <meta name="keywords" content="art,painting,music,chess">
-    <meta name="description" content="Art Studio is a professional school where you can learn painting, playing instruments and other hobbies.">
-    <title>Art Studio</title>
+    <meta name="description" content="Deep Blue Art Studio is a professional school where you can learn painting, playing instruments and other hobbies.">
+    <title>Deep Blue Art Studio</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -508,8 +515,7 @@
             </div>
             <div class="col-1-of-3">
                 <div class="footer__cell">
-                    <a href="#"
-                        target="_blank">
+                    <a href="#" target="_blank">
                         <span id="footer__fonticon--3" class="flaticon-maps-and-flags"></span>
                         <div class="footer__text">
                             <address class="footer__address">1st Avenue No:3/7 İzmir Turkey</address>
@@ -568,13 +574,17 @@
                 <div class="detail-page__text">
                     <h3 class="heading-tertiary">RESİM</h3>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo
                         <span class="u-bold">minumum 5 years</span> voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo.
                     </p>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With adults</span>  ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With adults</span> ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">
                         rat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesent
@@ -599,13 +609,17 @@
                 <div class="detail-page__text">
                     <h3 class="heading-tertiary">MÜZİK</h3>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo
                         <span class="u-bold">minumum 5 years</span> voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo.
                     </p>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With adults</span>  ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With adults</span> ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">
                         rat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesent
@@ -630,13 +644,17 @@
                 <div class="detail-page__text">
                     <h3 class="heading-tertiary">SATRANÇ</h3>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo
                         <span class="u-bold">minumum 5 years</span> voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo.
                     </p>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With adults</span>  ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With adults</span> ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">
                         rat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesent
@@ -661,13 +679,17 @@
                 <div class="detail-page__text">
                     <h3 class="heading-tertiary">FOTOĞRAFÇILIK</h3>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With kids</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo
                         <span class="u-bold">minumum 5 years</span> voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo.
                     </p>
                     <p class="paragraph paragraph--secondary">
-                        <span class="u-bold">With adults</span>  ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur, praesentium. Praesentium, consequuntur animi?
+                        <span class="u-bold">With adults</span> ipsum dolor sit amet consectetur adipisicing elit. Nam veritatis ipsa quaerat
+                        ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesentium quasi? Aspernatur,
+                        praesentium. Praesentium, consequuntur animi?
                     </p>
                     <p class="paragraph paragraph--secondary">
                         rat ad, voluptas nobis rerum! Fuga doloribus possimus fugiat minus quo earum praesent
